--- a/api/package.json
+++ b/api/package.json
@@ -7,9 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "prisma": "prisma",
-    "seed": "ts-node-dev src/seed.ts"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,11 +24,9 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@prisma/client": "^6.15.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
-    "prisma": "^6.15.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
